<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity"
    android:background="@color/back_ground"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:background="@drawable/bg_header"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/logo_delice_danone">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:text="@string/forgot_title_text"
            android:fontFamily="@font/montserrat_semibold"
            android:textStyle="bold"
            android:textColor="@color/text_color_title"
            android:textSize="20dp"
            >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:text="@string/forgot_message_text"
            android:fontFamily="@font/montserrat_semibold"
            android:textStyle="bold"
            android:textColor="#64748B"
            android:textSize="17dp"
            >
        </TextView>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_marginTop="30dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeColor="@color/box_stroke_color"
            app:boxStrokeWidth="3dp"
            app:boxStrokeWidthFocused="3dp"
            app:hintTextColor="@color/back_ground"
            android:textColorHint="@color/text_color_hint"
            android:hint="@string/signin_text_hint_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextForgotPasswordEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressBarSignIn"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"/>

        <Button
            android:layout_width="220dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_btn"
            app:backgroundTint="@color/btn_login_color1"
            android:text="@string/signin_btn_Login"
            android:textAllCaps="false"
            android:fontFamily="@font/nexa_bold"
            android:textStyle="bold"
            android:textSize="20dp"
            android:onClick="forgetPasswordResetBtnPressed"
            >

        </Button>


    </LinearLayout>


    <TextView
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/text_colors_slogan"
        android:text="@string/delice_danone_slogan">

    </TextView>

    <TextView
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/text_colors_slogan"
        android:text="@string/delice_danone_slogan2">
    </TextView>

</LinearLayout>

